persisters refactored